2013-09-30  Iain Sandoe  <iain@codesourcery.com>

	* config/rs6000/darwin.md (load_macho_picbase_si): Wrap machopic
	calls and defines in TARGET_MACHO conditional.
	(load_macho_picbase_di): Likewise.
	(reload_macho_picbase): Likewise.
	(reload_macho_picbase_si): Likewise.
	(reload_macho_picbase_di): Likewise.
	(nonlocal_goto_receiver): Likewise.

2013-09-30  Nick Clifton  <nickc@redhat.com>

	* config/msp430/msp430.c (msp430x_names): New array.  Lists MCUs
	that use the MSP430X ISA.
	(msp430_option_override): Scan -mmcu command line option for any
	MCU name that supports the MSP430X ISA.
	* config/msp430/t-msp430 (MULTILIB_MATCHES): Add matches for known
	-mmcu options which enable the MSP430X ISA.

2013-09-30  Richard Biener  <rguenther@suse.de>

	PR middle-end/58532
	* tree-cfg.c (make_abnormal_goto_edges): Skip debug statements
	before looking for setjmp-like calls.

2013-09-29  Iain Sandoe  <iain@codesourcery.com>

	PR target/10901
	* config/darwin-protos.h (machopic_get_function_picbase): New.
	* config/darwin.c (machopic_get_function_picbase): New.
	* config/rs6000/darwin.md (load_macho_picbase_si): Update picbase
	label for a new func.  (load_macho_picbase_di): Likewise.
	(reload_macho_picbase): New expand.
	(reload_macho_picbase_si): New insn.
	(reload_macho_picbase_di): New insn.
	(nonlocal_goto_receiver): New define and split.
	* config/rs6000/rs6000.md (unspec enum): Add UNSPEC_RELD_MPIC.
	(unspecv enum): Add UNSPECV_NLGR.

2013-09-29  Iain Sandoe  <iain@codesourcery.com>

	* config/rs6000/rs6000.c (rs6000_init_dwarf_reg_sizes_extra): Ensure
	that altivec registers are correctly sized on Darwin.

2013-09-29  Iain Sandoe  <iain@codesourcery.com>

	* config/t-darwin (darwin.o, darwin-c.o, darwin-f.o,
	darwin-driver.o): Use COMPILE and POSTCOMPILE.
	* config/x-darwin (host-darwin.o): Likewise.
	* config/i386/x-darwin (host-i386-darwin.o): Likewise.
	* config/rs6000/x-darwin (host-ppc-darwin.o): Likewise.